# drafters

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
dfs/: __init__.py  boards_ui.py  cloudsync.py  config.py  contest.py  db.py  draft.py  draftboard.py  fanduel.py  matching.py  ocr.py  opponents.py  projections.py  registry.py  scouting.py  sgo.py  slate.py  stats.py  tendencies.py
pages/: 1_Projections.py  2_Draft_Board.py  3_New_Contest.py  4_Active_Contests.py  5_History_and_Stats.py  6_Opponents.py  9_Odds_Source_Test.py
sample_data/: sample_props.csv
scripts/: debug_ocr.py  discover_odds.py  seed.py
tests/: conftest.py  test_cloudsync.py  test_contest.py  test_db.py  test_draft.py  test_draft_board_page.py  test_draftboard.py  test_home_page.py  test_lifecycle.py  test_matching.py  test_ocr.py  test_ocr_detect.py  test_ocr_e2e.py  test_pages_phase2.py  test_pages_phase3.py  test_pages_phase4.py  test_projections.py  test_projections_page.py  test_registry.py  test_sgo.py  test_smoke.py  test_tendencies.py  test_updates.py
