[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-dfs-engine"
version = "0.1.0"
description = "Local-first, free MLB DFS projection & contest engine"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "libsql-client>=0.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dfs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
